Add security features: JWT auth, rate limiting, validators, activity logging

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,25 @@
-# Environment Variables
-SECRET_KEY=your-secret-key
-JWT_SECRET_KEY=your-jwt-secret
+# Environment Variables - CẤU HÌNH BẢO MẬT
+# QUAN TRỌNG: Đổi tất cả giá trị trước khi deploy!
+
+# Flask Secret (dùng: python -c "import secrets; print(secrets.token_hex(32))")
+SECRET_KEY=your-super-secret-key-change-this
+
+# JWT Secret (khác với SECRET_KEY)
+JWT_SECRET_KEY=your-jwt-secret-key-change-this
+
+# Database
 DATABASE_URL=mysql+pymysql://root:password@localhost/student_db
+
+# JWT Token Expiry
+JWT_ACCESS_TOKEN_EXPIRES=3600
+JWT_REFRESH_TOKEN_EXPIRES=604800
+
+# Rate Limiting
+RATELIMIT_DEFAULT=100/hour
+RATELIMIT_LOGIN=5/5minutes
+
+# CORS
+CORS_ORIGINS=http://localhost:5500,http://127.0.0.1:5500
+
+# Debug Mode (set False in production!)
+DEBUG=True
