--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,24 @@
 # Backend Dependencies
+
+# Framework
 Flask==2.3.0
 Flask-SQLAlchemy==3.0.0
-Flask-JWT-Extended==4.5.0
 Flask-CORS==4.0.0
-python-dotenv==1.0.0
-pymysql==1.1.0
+
+# Authentication & Security
+Flask-JWT-Extended==4.5.0
 bcrypt==4.0.0
+PyJWT==2.8.0
+
+# Rate Limiting
+Flask-Limiter==3.5.0
+
+# Database
+pymysql==1.1.0
+
+# Validation
+email-validator==2.0.0
+python-dotenv==1.0.0
+
+# Security Headers
+flask-talisman==1.0.0
